# lovely_codes

./: .gitignore  CMakeLists.txt  README  davidim.vim  eval_expr.cpp  hanoi.cpp  test.vim
.archive/c/: debug_utils.h  eval_expr.cpp  glob_use.c  hook_snprintf.c  longjmp_demo.c  parse_int_list_in_string.c  tail_rec_by_wangyin.c  time_test.c  varg_macros.c
.archive/c/byte_order_swap/: main.c
.archive/c/counter_macro/: a.c
.archive/c/gcc/: a.c
.archive/c/gems/: hou-reading.c
.archive/c/skynet_crypt/: Makefile  skynet_crypt.c  skynet_crypt.h
.archive/c/str2int/: str2int.c
.archive/cpp/: overload.cpp
.archive/cpp/snippet/: member_function_pointer.cpp  std_string.cpp  template_quick_sort.cpp
.archive/cs/: .gitignore  CryptUtils.cs
.archive/fun/: bf2c.hs  jit_demo.c  mahjong_state_dot_demo.dot  poker_symbol.lua  test.jit.c
.archive/haskell/snippet/: Coroutine.hs  QuasiQuoter.hs  debug_haskell.hs  do_rec_demo.hs  eval.hs  exception.hs  ffi_demo.hs  happstack-yui-demo.hs  learn_parser.hs  lily.hs  log_test.hs  parse_csv.hs  quot_and_even.hs  state_counter_1st_acid_demo.hs  state_monad.hs
.archive/haskell/workspace/comment-stripper/: .project  comment-stripper.cabal
.archive/haskell/workspace/comment-stripper/src/: Main.hs
.archive/haskell/workspace/source-utility/: .project  source-utility.cabal
.archive/leetcode/: reverse_integer.cpp
.archive/linux/: .gitignore  Makefile  daemon_test.c  run_test.c
.archive/node/: icons.js
.archive/python/: dict_obj.py  flask_demo.py  gevent_demo.py  gevent_switch.py  learn_decorator.py  unicode.py  wait_set.py  zmq_message_demo.py
.archive/regex/: learn_regex.sh
.archive/scheme/: test.scrbl
.archive/sys/: .gitignore  Makefile  bochs_install.md  bochsrc  csapp.c
.archive/vim/: notes.vim.rst  test_user_input.vim  vim9_demo.vim
Haskell/tools/: base64.hs  dir_list.txt
c/: CMakeLists.txt  Makefile  debug_utils.c  eval_expr.cpp  file_tree_walk.c  get_opt_test.c  glob_use.c  hanoi.cpp  hook_snprintf.c  maze_path.c  parse_int_list_in_string.c  sscanf.c  time_test.c  timer_test.c  xor.c
c/byte_order_swap/: main.c
c/counter_macro/: h.h
c/gcc/: .gitignore  Tupfile  b.c
c/skynet_crypt/: skynet_crypt.c  skynet_crypt.h
c/zmq/: clt.c
clojure/: .gitignore  hello_light_table.clj
cpp/: CMakeLists.txt  strcpy_s.cpp  test_hashmap_header.cpp
cpp/cpp11/: std_function.cpp
cpp/snippet/: Makefile
cs/: Program.cs
devops/: docker-compose.yml
fay/: hello.hs
fun/: mahjong_state_dot_demo.dot
go/: .editorconfig  go.mod  hello.go  main.go
go/cmd/: demo.go  echo.go  hello.go  image.go  root.go  term.go
go/demo/: gopl_test.go  leetcode.go  leetcode_test.go
haskell/: sudoku.lhs
haskell/snippet/: Yield.hs  acid_post_demo.hs  ack.hs  advanced_acid_demo.hs  aeson.hs  base64.hs  containers.hs  convert_hex.hs  dir_walk.hs  encoding_convert.hs  eval.hs  heapsort.hs  ix_set_data_lens.hs  learn_parser.hs  liftIO.hs  memo.hs  memorized_fib.hs  mt.hs  pure_randomgen.hs  qsort.hs  test_lazy_exception_catch.hs  test_sys_env_exe_path.hs  unboxed_types_run_faster.hs  unzip.hs  web_routes_boomerang.hs  web_routes_hsp.hs  web_routes_simple_demo.hs  yield_demo.hs
haskell/snippet/language/: caseAndPatternMatch.hs  exception.hs  existential_type.hs  field_rand_2_typs.hs  flexibleInstance.hs  guard_monad_plus.hs  make_rules.sh  rules_ghc.hs  subsequences_n.hs  unbox_types.hs
haskell/tools/max_rect/: .gitignore  Main.hs  Makefile  MaxRect.cabal  MaxRect.hs  README.md  UtilityTypes.hs  draw_pack.js  pack_show.html  readme.md
haskell/tools/max_rect/cbits/: MainInCpp.cpp  MaxRect.h  MaxRectsBinPack.cpp  MaxRectsBinPack.h
haskell/tools/max_rect/src/: Main.hs  RectTest.hs
haskell/tools/max_rect/www/: draw_pack.js
haskell/workspace/convert-encoding/: cn  convert-encoding.cabal
haskell/workspace/convert-encoding/src/: AppConfig.hs  FileUtility.hs  Main.hs  NewlineMain.hs
haskell/workspace/project-utility/: .project  project-utility.cabal  readme.txt
haskell/workspace/project-utility/src/: AppConfig.hs  FileUtility.hs  Main.hs  Strings.hs  UpdateAndroidManifest.hs
haskell/workspace/remove-svn/: remove-svn.cabal
javascript/: let_hoist_es6.js
leetcode/: simple_list.c
linux/: .gitignore  core  daemon_test.c  demo.c  fork.py  fork_exec.c  forkdemo.c  getpwnam.c  localtime.c  run_test.c  watcher.py
lua/: for.lua
lua/PackRect/: MaxRectsBinPack.lua  PackRect.lua  data.lua  json.lua
lua/bytecode/: luac.bytecode.txt
lua/date/: date.lua
lua/lily/: bignum.lua  readme.md  test.lua  utils.lua
lua/matrix/: matrix.lua
lua/quick/: quick_console.lua  test.lua  utils.lua
lua/terra/: a.c  a.t
lua/test/: bytecode_load_save.lua  curry.lua  date.lua  decorators_test.lua  function_call_sugar.lua  load.lua  print_table.lua  random_shuffle.lua  remove_bom.lua  string.lua  swith_case_in_Lua.lua  test_sort.lua  try_catch_table_syntax_sugar.lua  vararg.lua
lua/test/bytecode/: .gitignore  Makefile  learn_bytecode.lua  luajit.bytecode.txt
lua/toolkit/: convert_nginx_mime_types.lua  dub  indent.lua  mime_types.lua  remove_space.lua  unix_time.lua  unluac_tool.lua
lua/toolkit/encryption/: Makefile  blowfish.cpp  lua_zlib.c  rcat.lua  readme.md  test.lua  xxtea.h
lua/toolkit/xxtea/: Makefile  blowfish.cpp  blowfish.h  test.lua  (+1 more)
lua/utf8/: demo.lua  utf8_sub.lua
lua/utils/: lua_version.lua  spairs.lua
lua/web/: Makefile  clock.lua  demo.html  lua.vm.js  matrix.lua  readme.md  simple_http.py  wireworld.html  wireworld.lua
luvit/weblit_demo/: Makefile  server.lua
node/: crypto_random.js  unpack_plist.js
python/: dict_obj.py  gevent_demo.py  hello_light_table.clj  lisp.py  sitecustomize.py  unicode.py  zmq_display_demo.py  zmq_message_demo.py
red/: demo.r
regex/: test_pcre
rust/: Cargo.toml
rust/hello/: .gitignore
rust/hi-rocket/: Cargo.toml
rust/src/: main.rs
scheme/: Makefile
sys/: Makefile  boot.asm
vim/: davidim.vim  notes.vim.rst  test.vim  test_user_input.vim
web/: package.json  vite.config.ts
web/src/: App.tsx
zig/: .gitignore
zig/src/: main.zig
zsh/: lily.sh  utility.sh
(+84 files in other folders)
