name:           convert-encoding
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         david

executable convert-encoding
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4, hxt, utf8-string, encoding,
    directory, filepath, bytestring, iconv, text
  ghc-options:     -Wall
  other-modules:
                   AppConfig,
                   FileUtility

executable convert-newline
  hs-source-dirs:  src
  main-is:         NewlineMain.hs
  build-depends:   base >= 4, hxt, utf8-string,
    directory, filepath, bytestring, text
  ghc-options:     -Wall
  other-modules:
                   AppConfig,
                   FileUtility

