name:           comment-stripper
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Administrator

executable comment-stripper
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   directory, filepath
  ghc-options:     -Wall